# auth

backend/: .env  Cargo.toml
frontend/: package.json
frontend/src/app/: layout.tsx  page.module.scss  page.tsx
frontend/src/styles/: globals.scss
